WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281506
[WTF] Narrow scope of ignored -Wunsafe-buffer-usage warnings from ASCIILiteral.h to SuperFastHash.h
https://bugs.webkit.org/show_bug.cgi?id=281506
Summary
[WTF] Narrow scope of ignored -Wunsafe-buffer-usage warnings from ASCIILitera...
David Kilzer (:ddkilzer)
Reported
2024-10-15 10:46:29 PDT
[WTF] Narrow scope of ignored -Wunsafe-buffer-usage warnings from ASCIILiteral.h to SuperFastHash.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-15 10:46:52 PDT
<
rdar://problem/137973769
>
David Kilzer (:ddkilzer)
Comment 2
2024-10-15 10:50:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35223
EWS
Comment 3
2024-10-18 16:12:09 PDT
Committed
285440@main
(00e4ae32b87a): <
https://commits.webkit.org/285440@main
> Reviewed commits have been landed. Closing PR #35223 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug