Source/JavaScriptCore/tools/FunctionAllowlist.cpp
@@ -70,7 +70,7 @@ FunctionAllowlist::FunctionAllowlist(const char* filename)
         if (!length)
             continue;
         
-        m_entries.add(String({ line, length }));
+        m_entries.add(String(unsafeForgeSpan(line, length)));
     }
 
     int result = fclose(f);
