Source/JavaScriptCore/tools/FunctionOverrides.cpp
@@ -218,13 +218,13 @@ static String parseClause(const char* keyword, size_t keywordLength, FILE* file,
     const char* delimiterEnd = strchr(delimiterStart, '{');
     if (!delimiterEnd)
         FAIL_WITH_ERROR(SYNTAX_ERROR, ("Missing { after '", keyword, "' clause start delimiter:\n", line, "\n"));
-    
+
     size_t delimiterLength = delimiterEnd - delimiterStart;
-    String delimiter({ delimiterStart, delimiterLength });
+    String delimiter(unsafeForgeSpan(delimiterStart, delimiterLength));
 
     if (hasDisallowedCharacters(delimiterStart, delimiterLength))
         FAIL_WITH_ERROR(SYNTAX_ERROR, ("Delimiter '", delimiter, "' cannot have '{', '}', or whitespace:\n", line, "\n"));
-    
+
     CString terminatorCString = makeString('}', delimiter).ascii();
     const char* terminator = terminatorCString.data();
     line = delimiterEnd; // Start from the {.
