Source/WTF/wtf/text/ASCIILiteral.h
@@ -26,14 +26,11 @@
 
 #pragma once
 
-#include <wtf/Compiler.h>
-
-WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
-
 #include <span>
 #include <string>
 #include <type_traits>
 #include <wtf/ASCIICType.h>
+#include <wtf/Compiler.h>
 #include <wtf/Forward.h>
 #include <wtf/HashFunctions.h>
 #include <wtf/StdLibExtras.h>
@@ -52,7 +49,7 @@ public:
     static constexpr ASCIILiteral fromLiteralUnsafe(const char* string)
     {
         ASSERT_UNDER_CONSTEXPR_CONTEXT(string);
-        return ASCIILiteral { string };
+        return ASCIILiteral { unsafeForgeSpan(string, std::char_traits<char>::length(string) + 1) };
     }
 
     WTF_EXPORT_PRIVATE void dump(PrintStream& out) const;
@@ -67,7 +64,7 @@ public:
 
     constexpr const char* characters() const { return m_charactersWithNullTerminator.data(); }
     constexpr size_t length() const { return !m_charactersWithNullTerminator.empty() ? m_charactersWithNullTerminator.size() - 1 : 0; }
-    std::span<const LChar> span8() const { return { bitwise_cast<const LChar*>(characters()), length() }; }
+    std::span<const LChar> span8() const { return spanReinterpretCast<const LChar>(m_charactersWithNullTerminator.first(length())); }
     std::span<const char> spanIncludingNullTerminator() const { return m_charactersWithNullTerminator; }
     size_t isEmpty() const { return m_charactersWithNullTerminator.size() <= 1; }
 
@@ -83,12 +80,12 @@ public:
     bool isDeletedValue() const { return characters() == reinterpret_cast<char*>(-1); }
 
 private:
-    constexpr explicit ASCIILiteral(const char* characters)
-        : m_charactersWithNullTerminator(characters, std::char_traits<char>::length(characters) + 1)
+    constexpr explicit ASCIILiteral(std::span<const char> spanWithNullTerminator)
+        : m_charactersWithNullTerminator(spanWithNullTerminator)
     {
 #if ASSERT_ENABLED
-    for (size_t i = 0; i < length(); ++i)
-        ASSERT_UNDER_CONSTEXPR_CONTEXT(isASCII(m_charactersWithNullTerminator[i]));
+        for (size_t i = 0, size = length(); i < size; ++i)
+            ASSERT_UNDER_CONSTEXPR_CONTEXT(isASCII(m_charactersWithNullTerminator[i]));
 #endif
     }
 
@@ -145,11 +142,12 @@ constexpr ASCIILiteral operator"" _s(const char* characters, size_t)
 
 constexpr std::span<const LChar> operator"" _span(const char* characters, size_t n)
 {
+    auto span = spanReinterpretCast<const LChar>(unsafeForgeSpan(characters, n));
 #if ASSERT_ENABLED
-    for (size_t i = 0; i < n; ++i)
-        ASSERT_UNDER_CONSTEXPR_CONTEXT(isASCII(characters[i]));
+    for (size_t i = 0, size = span.size(); i < size; ++i)
+        ASSERT_UNDER_CONSTEXPR_CONTEXT(isASCII(span[i]));
 #endif
-    return std::span { bitwise_cast<const LChar*>(characters), n };
+    return span;
 }
 
 } // inline StringLiterals
@@ -157,5 +155,3 @@ constexpr std::span<const LChar> operator"" _span(const char* characters, size_t
 } // namespace WTF
 
 using namespace WTF::StringLiterals;
-
-WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
